# geostuff

./: CMakeLists.txt  README.md  winbuild.cmd  winrun.cmd
data/: cities.trackfile  geolocation.csv
doc/: readme.txt
libs/gtest-1.7.0/msvc/: UpgradeLog.XML
libs/gtest-1.7.0/msvc/gtest-md/Debug/: gtest_main-mdd.lib  gtestd.lib
libs/gtest-1.7.0/msvc/gtest-md/Release/: gtest.lib  gtest_main-md.lib
libs/gtest-1.7.0/msvc/gtest-md/Release/gtest-md/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
libs/gtest-1.7.0/msvc/gtest-md/Release/gtest_main-md/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  gtest_main-md.lastbuildstate  lib.command.1.tlog
src/: GPSObservation.cpp  GPSObservation.hpp  GPSTrackFile.cpp  GPSTrackFile.hpp  GeolocationFromFiledata.cpp  GeolocationFromFiledata.hpp  Mapbuilder.cpp  Mapbuilder.hpp  RestingplaceFinder.cpp  RestingplaceFinder.hpp  Roadmap.cpp  Roadmap.hpp  SVGImage.cpp  SVGImage.hpp  StreetAddress.cpp  StreetAddress.hpp  StreetAddressLatLongFile.cpp  StreetAddressLatLongFile.hpp  WigleWifiDatabase.cpp  WigleWifiDatabase.hpp  distancefromlatlonglatlong.cpp
src/tests/: CMakeLists.txt  GPSObservationTests.cpp  GPSTrackFileTests.cpp  TestsMain.cpp
src/tools/: addtrackfiletomap.cpp  distancefromlatlonglatlong.cpp  findrestingplaces.cpp  streetaddressfromlatlong.cpp  svgfromlabellist.cpp  svgfrommap.cpp  svgfromstackofsvgs.cpp  svgfromtrackfile.cpp  wiglewifistats.cpp  wiglewifitotrackfile.cpp
